@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.ex.ua.viewer" name="Ex.Ua Viewer" version="1.1.6" provider-name="vadim.skorba@gmail.com">
+<addon id="plugin.video.ex.ua.viewer" name="Ex.Ua Viewer" version="1.1.7" provider-name="vadim.skorba@gmail.com">
 	<requires>
 		<import addon="xbmc.python" version="1.0"/>
 	</requires>
